@@ -29,7 +29,6 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.nio.ByteBuffer;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -138,7 +137,7 @@ public class TestPackages extends SolrCloudTestCase {
         new V2Request.Builder("/cluster/package")
             .forceV2(true)
             .withMethod(SolrRequest.METHOD.POST)
-            .withPayload(Collections.singletonMap("add", add))
+            .withPayload(Map.of("add", add))
             .build();
 
     req.process(cluster.getSolrClient());
@@ -219,7 +218,7 @@ public class TestPackages extends SolrCloudTestCase {
         new V2Request.Builder("/cluster/package")
             .forceV2(true)
             .withMethod(SolrRequest.METHOD.POST)
-            .withPayload(Collections.singletonMap("add", add))
+            .withPayload(Map.of("add", add))
             .build();
 
     req.process(cluster.getSolrClient());
@@ -409,7 +408,7 @@ public class TestPackages extends SolrCloudTestCase {
         new V2Request.Builder("/cluster/package")
             .withMethod(SolrRequest.METHOD.POST)
             .forceV2(true)
-            .withPayload(Collections.singletonMap("delete", delVersion))
+            .withPayload(Map.of("delete", delVersion))
             .build();
     delete.process(cluster.getSolrClient());
 
@@ -591,7 +590,7 @@ public class TestPackages extends SolrCloudTestCase {
         new V2Request.Builder("/cluster/package")
             .forceV2(true)
             .withMethod(SolrRequest.METHOD.POST)
-            .withPayload(Collections.singletonMap("add", add))
+            .withPayload(Map.of("add", add))
             .build();
 
     // the files are not yet there. The command should fail with error saying "No such file"
@@ -600,7 +599,7 @@ public class TestPackages extends SolrCloudTestCase {
     // post the jar file. No signature is sent
     postFileAndWait(cluster, "runtimecode/runtimelibs.jar.bin", FILE1, null);
 
-    add.files = Collections.singletonList(FILE1);
+    add.files = List.of(FILE1);
     expectError(req, cluster.getSolrClient(), errPath, FILE1 + " has no signature");
     // now we upload the keys
     byte[] derFile = readFile("cryptokeys/pub_key512.der");
@@ -613,7 +612,7 @@ public class TestPackages extends SolrCloudTestCase {
         "L3q/qIGs4NaF6JiO0ZkMUFa88j0OmYc+I6O7BOdNuMct/xoZ4h73aZHZGc0+nmI1f/U3bOlMPINlSOM6LK3JpQ==");
     // with correct signature
     // after uploading the file, let's delete the keys to see if we get proper error message
-    add.files = Collections.singletonList(FILE2);
+    add.files = List.of(FILE2);
     /*expectError(req, cluster.getSolrClient(), errPath,
     "ZooKeeper does not have any public keys");*/
 
@@ -641,7 +640,7 @@ public class TestPackages extends SolrCloudTestCase {
     // this time we are adding the second version of the package (0.13)
     add.version = "0.13";
     add.pkg = "test_pkg";
-    add.files = Collections.singletonList(FILE3);
+    add.files = List.of(FILE3);
 
     // this request should succeed
     req.process(cluster.getSolrClient());
@@ -661,7 +660,7 @@ public class TestPackages extends SolrCloudTestCase {
         new V2Request.Builder("/cluster/package")
             .forceV2(true)
             .withMethod(SolrRequest.METHOD.POST)
-            .withPayload(Collections.singletonMap("delete", delVersion))
+            .withPayload(Map.of("delete", delVersion))
             .build();
 
     // we are expecting an error
@@ -770,7 +769,7 @@ public class TestPackages extends SolrCloudTestCase {
         new V2Request.Builder("/cluster/package")
             .forceV2(true)
             .withMethod(SolrRequest.METHOD.POST)
-            .withPayload(Collections.singletonMap("add", add))
+            .withPayload(Map.of("add", add))
             .build();
     req.process(cluster.getSolrClient());
 
@@ -812,7 +811,7 @@ public class TestPackages extends SolrCloudTestCase {
         new V2Request.Builder("/cluster/package")
             .forceV2(true)
             .withMethod(SolrRequest.METHOD.POST)
-            .withPayload(Collections.singletonMap("add", add))
+            .withPayload(Map.of("add", add))
             .build();
     req.process(cluster.getSolrClient());
 
