@@ -27,7 +27,6 @@ import static org.apache.solr.common.util.Utils.fromJSONString;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.StringReader;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
@@ -139,8 +138,7 @@ public class TestUtils extends SolrTestCaseJ4 {
     ContentStream stream =
         new ContentStreamBase.ByteArrayStream(baos.toByteArray(), null, "application/javabin");
     List<CommandOperation> commands =
-        CommandOperation.readCommands(
-            Collections.singletonList(stream), new NamedList<>(), Set.of("single"));
+        CommandOperation.readCommands(List.of(stream), new NamedList<>(), Set.of("single"));
 
     assertEquals(5, commands.size());
   }
